--- a/ThuQuan/Views/Shared/_Layout.cshtml
+++ b/ThuQuan/Views/Shared/_Layout.cshtml
@@ -1,4 +1,5 @@
-﻿<!DOCTYPE html>
+﻿
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -20,7 +21,7 @@
 
         </div>
         <div class="user-menu">
-            <button class="user-btn" id="userBtn">QUỐC HUY ▼</button>
+            <button class="user-btn" id="userBtn">@TempData["UserName"]</button>
             <div class="dropdown" id="dropdownMenu">
                 <button onclick="window.location.href='/profile'" class="btn-info" id="btn-info">Thông tin</button>
                 <button class="btn-info" id>Lịch sử giao dịch</button>
