--- a/ThuQuan/Views/Shared/_Layout.cshtml
+++ b/ThuQuan/Views/Shared/_Layout.cshtml
@@ -24,7 +24,7 @@
             <button class="user-btn" id="userBtn">@ViewData["FullName"]</button>
             <div class="dropdown" id="dropdownMenu">
                 <a asp-controller="Profile" asp-action="Profile" class="dropdown-item">Thông tin</a>
-                <a asp-controller="Transaction" asp-action="History" class="dropdown-item">Lịch sử giao dịch</a>
+                <a asp-controller="Home" asp-action="LichSuDatCho" class="dropdown-item">Lịch sử</a>
                 <a asp-controller="Login" asp-action="Logout" class="dropdown-item">Đăng xuất</a>
 
 
