--- a/ThuQuan/Views/Login/ForgotPassword.cshtml
+++ b/ThuQuan/Views/Login/ForgotPassword.cshtml
@@ -115,7 +115,20 @@
 <body>
     <div class="container">
         <h2>Quên tài khoản</h2>
+
         <form asp-action="ForgotPassword" asp-controller="Login" method="post">
+            @if (TempData["SuccessMessage"] != null)
+            {
+                <div style="color: green; text-align:center; margin-bottom:10px;">
+                    @TempData["SuccessMessage"]
+                </div>
+            }
+            @if (TempData["ErrorMessage"] != null)
+            {
+                <div style="color: red; text-align:center; margin-bottom:10px;">
+                    @TempData["ErrorMessage"]
+                </div>
+            }
             <label for="username">Nhập Tên tài khoản của bạn</label>
             <input type="text" id="username" name="username" placeholder="tentaikhoan" required />
 
