--- a/ThuQuan/Views/Login/Register.cshtml
+++ b/ThuQuan/Views/Login/Register.cshtml
@@ -78,6 +78,18 @@
             background-color: #005fa3;
         }
 
+        .message {
+            margin-top: 10px;
+            font-size: 14px;
+            text-align: center;
+        }
+
+        .message .alert {
+            padding: 10px;
+            margin-top: 10px;
+            border-radius: 5px;
+        }
+
         .footer {
             display: none
         }
