--- a/ThuQuan/Views/Shared/_Layout.cshtml
+++ b/ThuQuan/Views/Shared/_Layout.cshtml
@@ -18,6 +18,11 @@
                 quán</a>
             <a href="@Url.Action("Index", "Home")" style="margin-left:40px;color:navy; text-decoration: none;">Đặt
                 lịch</a>
+            <a href="@Url.Action("PhieuPhatHuDo", "Home")"
+                style="margin-left:40px;color:navy; text-decoration: none;">Lịch sử
+                Phạt</a>
+            <a href="@Url.Action("DanhSachPhieuMuon", "Home")" style="margin-left:40px;color:navy; text-decoration: none;">Lịch sử
+                mượn</a>
 
         </div>
         <div class="user-menu">
